--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Horizons by TEMPLATED</title>
+		<title>Patricia Ternes</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -29,7 +29,7 @@
 				<div class="container">
 						
 					<!-- Logo -->
-						<h1><a href="#" id="logo">Horizons</a></h1>
+						<h1><a href="#" id="logo">Patricia Ternes's Homepage</a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
