--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
 
 
 					<!-- Banner -->
-					<! 	<div id="banner">
+					 	<div id="banner">
 							<div class="container">
 								<section>
 									<header class="major">
 										<h2>Website development!</h2>
+										<!--
 										<span class="byline">&hellip; a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit!</span>
 									</header>
 									<a href="#" class="button alt">Sign Up</a>
+									-->
 								</section>			
 							</div>
 						</div> >
