--- a/pages/publications.html
+++ b/pages/publications.html
@@ -34,7 +34,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="/pagespublications.html">Publications</a></li>
+								<li><a href="/pages/publications.html">Publications</a></li>
 								<li><a href="/pages/research.html">Research Projects</a></li>
 								<li><a href="/pages/teaching.html">Teaching</a></li>
 								<li><a href="/pages/cv.html">CV</a></li>
