--- a/pages/publications.html
+++ b/pages/publications.html
@@ -29,7 +29,7 @@
 				<div class="container">
 						
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Patricia Ternes' Homepage</a></h1>
+						<h1><a href="/index.html" id="logo">Patricia Ternes' Homepage</a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
