--- a/pages/publications.html
+++ b/pages/publications.html
@@ -60,7 +60,7 @@
                         <div class="2u">
                             <ul class="style">
                                 <li>
-                                    <img src="images/construction.jpg" 
+                                    <img src="/images/construction.jpg" 
                                          style="width:100%; border-radius:10px;"/>
                                 </li>
                             </ul>
@@ -69,7 +69,7 @@
                         <div class="10u">
                             <ul class="style">
                                 <li>
-                                    <h1><a href="index.html" id="logo">This page is under construction</a></h1>
+                                    <h1><a>This page is under construction</a></h1>
                                 </li>
                             </ul>
                         </div>
