--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 				<div class="container">
 						
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Patricia Ternes' Homepage</a></h1>
+						<h1><a href="/index.html" id="logo">Patricia Ternes' Homepage</a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="pages/publications.html">Publications</a></li>
+								<li><a href="/publications.html">Publications</a></li>
 								<li><a href="/pages/research.html">Research Projects</a></li>
 								<li><a href="/pages/teaching.html">Teaching</a></li>
 								<li><a href="/pages/cv.html">CV</a></li>
