--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="/publications.html">Publications</a></li>
-								<li><a href="/pages/research.html">Research Projects</a></li>
-								<li><a href="/pages/teaching.html">Teaching</a></li>
-								<li><a href="/pages/cv.html">CV</a></li>
+								<li><a href="/research.html">Research Projects</a></li>
+								<li><a href="/teaching.html">Teaching</a></li>
+								<li><a href="/cv.html">CV</a></li>
 								<!--<li ><a href="/blog.html">Blog</a></li>-->
 
 								<!-- Icons -->
@@ -102,9 +102,9 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="{{ site.baseurl }}/publications.html">
+                        <a href="/publications.html">
                             <span  class="fa fa-book"></span></a>
-                        <h3><a href="{{ site.baseurl }}/publications.html">Publications</a></h3><br/><br/>
+                        <h3><a href="/publications.html">Publications</a></h3><br/><br/>
                     </li>
                 </ul>
             </div>
@@ -112,8 +112,8 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="{{ site.baseurl }}/research.html"><span class="fa fa-flask"></span></a>
-                        <h3><a href="{{ site.baseurl }}/research.html">Research Projects</a></h3><br/><br/>
+                        <a href="/research.html"><span class="fa fa-flask"></span></a>
+                        <h3><a href="/research.html">Research Projects</a></h3><br/><br/>
                     </li>
                 </ul>
             </div>
@@ -121,8 +121,8 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="{{ site.baseurl }}/teaching.html"><span class="fa fa-university"></span></a>
-                        <h3><a href="{{ site.baseurl }}/teaching.html">Teaching</a></h3><br/><br/>
+                        <a href="/teaching.html"><span class="fa fa-university"></span></a>
+                        <h3><a href="/teaching.html">Teaching</a></h3><br/><br/>
                     </li>
                 </ul>
             </div>
@@ -131,8 +131,8 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="{{ site.baseurl }}/cv.html"><span class="fa fa-user"></span></a>
-                        <h3><a href="{{ site.baseurl }}/cv.html">CV and Contact</a></h3><br/><br/>
+                        <a href="/cv.html"><span class="fa fa-user"></span></a>
+                        <h3><a href="/cv.html">CV and Contact</a></h3><br/><br/>
                     </li>
                 </ul>
             </div>
@@ -150,7 +150,7 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="{{ site.baseurl }}/presentations.html">
+                        <a href="/presentations.html">
                             <span class="fa fa-book"></span></a>
                         <h3><a href="{{ site.baseurl }}/presentations.html">Presentations</a></h3><br/><br/>
                     </li>
