--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="/pages/publications.html">Publications</a></li>
+								<li><a href="/publications.html">Publications</a></li>
 								<li><a href="/pages/research.html">Research Projects</a></li>
 								<li><a href="/pages/teaching.html">Teaching</a></li>
 								<li><a href="/pages/cv.html">CV</a></li>
@@ -60,7 +60,7 @@
                         <div class="2u">
                             <ul class="style">
                                 <li>
-                                    <img src="images/construction.jpg" 
+                                    <img src="/images/construction.jpg" 
                                          style="width:100%; border-radius:10px;"/>
                                 </li>
                             </ul>
@@ -69,7 +69,7 @@
                         <div class="10u">
                             <ul class="style">
                                 <li>
-                                    <h1><a href="index.html" id="logo">This page is under construction</a></h1>
+                                    <h1><a>This page is under construction</a></h1>
                                 </li>
                             </ul>
                         </div>
