--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="/teaching.html"><span class="fa fa-university"></span></a>
+                        <a href="/teaching.html"><span class="fas fa-university"></span></a>
                         <h3><a href="/teaching.html">Teaching</a></h3><br/><br/>
                     </li>
                 </ul>
@@ -152,7 +152,7 @@
                     <li>
                         <a href="/presentations.html">
                             <span class="fa fa-book"></span></a>
-                        <h3><a href="{{ site.baseurl }}/presentations.html">Presentations</a></h3><br/><br/>
+                        <h3><a href="/presentations.html">Presentations</a></h3><br/><br/>
                     </li>
                 </ul>
             </div>
