--- a/research.html
+++ b/research.html
@@ -35,9 +35,9 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="/publications.html">Publications</a></li>
-								<li><a href="/pages/research.html">Research Projects</a></li>
-								<li><a href="/pages/teaching.html">Teaching</a></li>
-								<li><a href="/pages/cv.html">CV</a></li>
+								<li><a href="/research.html">Research Projects</a></li>
+								<li><a href="/teaching.html">Teaching</a></li>
+								<li><a href="/cv.html">CV</a></li>
 								<!--<li ><a href="/blog.html">Blog</a></li>-->
 
 								<!-- Icons -->
