--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="4u">
                 <ul class="style">
                     <li>
-                        <a href="/teaching.html"><span class="fas fa-university"></span></a>
+                        <a href="/teaching.html"><span class="fa fa-university"></span></a>
                         <h3><a href="/teaching.html">Teaching</a></h3><br/><br/>
                     </li>
                 </ul>
