--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Patricia Ternes</title>
+		<title>P Ternes' Publications</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
