--- a/publications.html
+++ b/publications.html
@@ -58,52 +58,59 @@
 						</header>
 
 			<!-- Papers -->
-			<h3 style="color:#00695F"; id="peer-reviewed-journal-articles"><a name="papers"></a>Peer-Reviewed Journal Articles</h3>
+			<h3 id="peer-reviewed-journal-articles"><a name="papers"></a>Peer-Reviewed Journal Articles</h3>
 
 				<!--<h4 id="2020">2020</h4> -->
 
-					<p>Mendonça, B. H. S., <strong>P. Ternes</strong>, E. Salcedo, A. B. de Oliveira, and M. C. Barbosa (2020)
+					<p> <span  class="fa fa-book" style="color:#00695F";></span>
+						Mendonça, B. H. S., <strong>P. Ternes</strong>, E. Salcedo, A. B. de Oliveira, and M. C. Barbosa (2020)
 					<a href="https://doi.org/10.1063/1.5129394">Water diffusion in rough carbon nanotubes.</a>
 					<em>The Journal of Chemical Physics</em> 152 (2): 024708.</p>
 
 				<!--<h4 id="2019">2019</h4> -->
 
-					<p>Fonseca, T. O., M. M. Szortyka, <strong>P. Ternes</strong>, C. Gavazzoni, A. B. de Oliveira, and M. C. Barbosa (2019)
+					<p> <span  class="fa fa-book" style="color:#00695F";></span>
+						Fonseca, T. O., M. M. Szortyka, <strong>P. Ternes</strong>, C. Gavazzoni, A. B. de Oliveira, and M. C. Barbosa (2019)
 					<a href="https://doi.org/10.1007/s11433-019-9416-3">Dewetting in associating lattice gas model confined by hydrophobic walls.</a>
 					<em>Science China Physics, Mechanics & Astronomy</em> 62 (10): 107009.</p>
 
 				<!--<h4 id="2018">2018</h4> -->
 
-					<p><strong>Ternes, P.</strong>, E. Salcedo, and M. C. Barbosa (2018)
+					<p> <span  class="fa fa-book" style="color:#00695F";></span>
+						<strong>Ternes, P.</strong>, E. Salcedo, and M. C. Barbosa (2018)
 					<a href="https://doi.org/10.1103/PhysRevE.97.033104">Relation between boundary slip mechanisms and waterlike fluid behavior</a>
 					<em>Physical Review E</em> 97 (3): 033104.</p>
 
 				<!--<h4 id="2017">2017</h4> -->
 
-					<p><strong>Ternes, P.</strong>, A. M.-Coto, and E. Salcedo (2017)
+					<p> <span  class="fa fa-book" style="color:#00695F";></span>
+						<strong>Ternes, P.</strong>, A. M.-Coto, and E. Salcedo (2017)
 					<a href="https://doi.org/10.1063/1.4995448">Single-file mobility of water-like fluid in a generalized Frenkel-Kontorova model</a>
 					<em>The Journal of Chemical Physics</em> 147 (3): 034510.</p>
 
+					<p> <span  class="fa fa-book" style="color:#00695F";></span>
 					Fonseca, T. O., <strong>P. Ternes</strong>, A. B. de Oliveira, and M. C. Barbosa (2017)
 					<a href="https://periodicos.unb.br/index.php/physicae/article/view/13367">Freezing Suppression in Conﬁned Water</a>
 					<em>Physicae Organum</em> 3 (2).</p>
 
 
 			<!-- Books -->
-			<!-- <h3 style="color:#00695F"; id="book-chapters"><a name="chapters"></a>Book Chapters</h3> -->
+			<!-- <h3 id="book-chapters"><a name="chapters"></a>Book Chapters</h3> -->
 
-			<!-- <h3 style="color:#00695F"; id="articles-in-conferece-proceedings"><a name="proceedings"></a>Articles in Conferece Proceedings</h3> -->
+			<!-- <h3 id="articles-in-conferece-proceedings"><a name="proceedings"></a>Articles in Conferece Proceedings</h3> -->
 
-			<!-- <h3 style="color:#00695F"; id="working-papers-pre-prints-and-others"><a name="workingpapers"></a>Working Papers, Pre-Prints and Others</h3> -->
+			<!-- <h3 id="working-papers-pre-prints-and-others"><a name="workingpapers"></a>Working Papers, Pre-Prints and Others</h3> -->
 			<p> &nbsp; </p>
-			<h3 style="color:#00695F"; id="phd-thesis"><a name="thesis"></a>PhD Thesis</h3>
-				<p><strong>Ternes, P.</strong> (2018). 
+			<h3 id="phd-thesis"><a name="thesis"></a>PhD Thesis</h3>
+				<p> <span  class="fa fa-book" style="color:#00695F";></span>
+					<strong>Ternes, P.</strong> (2018). 
 				<a href="https://www.lume.ufrgs.br/handle/10183/179740">Flow of a nanoconfined water-like fluid</a>
 				<em>Institute of Physics, Federal University of Rio Grande do Sul</em>, Porto Alegre, Brazil.</p>
 
 			<p> &nbsp; </p>
-			<h3 style="color:#00695F"; id="msc-dissertation"><a name="dissertation"></a>Master Dissertation</h3>
-				<p><strong>Ternes, P.</strong> (2014). 
+			<h3 id="msc-dissertation"><a name="dissertation"></a>Master Dissertation</h3>
+				<p> <span  class="fa fa-book" style="color:#00695F";></span>
+					<strong>Ternes, P.</strong> (2014). 
 				<a href="https://repositorio.ufsc.br/handle/123456789/129137">Analisys of the water single-file state in SWNTs with a Frenkel-Kontorova model</a>
 				<em>Federal University of Santa Catarina</em>, Florianópolis, Brazil.</p>
 
