--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
         <div class="row">
    
             <!-- Content -->
-            <div class="2u">
+            <div class="3u">
                 <ul class="style">
                     <li>
                         <img src="images/index/pic1.jpg" alt="Picture of Patricia" 
-                             style="width:100%; border-radius:10px;"/>
+                             style="width:109%; border-radius:20px;"/>
                     </li>
                 </ul>
             </div>
             
-            <div class="10u">
+            <div class="9u">
                 <ul class="style">
                     <li>
                         I am a Researcher in Simulating Urban Systems at the School of Geography, 
@@ -82,7 +82,7 @@
                     	people around cities, in particular using agent-based modelling and data assimilation 
                     	techniques.
 						I am currently working <a href="https://dust.leeds.ac.uk/">DUST project</a>
-						funded by the European Research Council</i>).
+						funded by the European Research Council</i>.
 						For more details, see my <a href="./research.html">current projects</a>.
                     </li>                
                     <li>
