--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 							<!-- Icons -->
 							<!-- <li style="align:right;"><a href="/feed.xml" title="Subscribe (RSS)"><span class="fa fa-rss-square"></span></a></li>-->
 							<li style="align:right;"><a href="https://github.com/patricia-ternes/" title="GitHub"><span class="fa fa-github-square"></span></a></li>
-							<!-- <li style="align:right;"><a href="https://twitter.com/nickmalleson" title="Twitter"><span class="fa fa-twitter-square"></span></a></li>-->
+							<!-- <li style="align:right;"><a href="https://twitter.com/..." title="Twitter"><span class="fa fa-twitter-square"></span></a></li>-->
 						</ul>
 					</nav>
 
