teaching page upgrade

--- a/teaching.html
+++ b/teaching.html
@@ -143,8 +143,8 @@
         <h4 id="training-latex"> &ensp;&ensp;  A brief introduction to LaTeX</h4>
             <ul style="PADDING-LEFT: 50px">
             <li> Workshop content:</li> </ul>
-                    <li style="PADDING-LEFT: 80px"> What is Latex? </li>
-                    <li style="PADDING-LEFT: 80px"> Latex versus Word Processors </li>
+                    <li style="PADDING-LEFT: 80px"> What is LaTeX? </li>
+                    <li style="PADDING-LEFT: 80px"> LaTeX versus Word Processors </li>
                     <li style="PADDING-LEFT: 80px"> Document Classes. Types and some examples (Texts, Figures, Charts, Presentations, Posters)</li>
                     <li style="PADDING-LEFT: 80px"> Introduction to ShareLaTeX</li>
                     <li style="PADDING-LEFT: 80px"> Preamble and Packages </li>
