--- a/teaching.html
+++ b/teaching.html
@@ -104,7 +104,7 @@
                             <div class="4u">
                                 <ul class="style">
                                     <li>
-                                        <a href="#internships"><span class="fa fa-address-card"></span></a>
+                                        <a href="#internships"><span class="fa fa-id-card-alt"></span></a>
                                         <h3><a href="#internships">Internships</a></h3>
                                     </li>
                                     <li>&nbsp;</li>
@@ -176,7 +176,7 @@
 
    <hr class="dashed">
 
-        <h4 id="intern-inclusiveEducation" style="PADDING-LEFT: 50px; color:#00695F";> Intern in Science Room, Social Service of Commerce (SESC) </h4>
+        <h4 id="intern-sesc" style="PADDING-LEFT: 50px; color:#00695F";> Intern in Science Room, Social Service of Commerce (SESC) </h4>
          <ul style="PADDING-LEFT: 50px">
             <li> <span class="fa fa-calendar-alt" style="color:#00695F";></span> Mar 2010 - Dec 2010 </li>
             <li> <span class="fa fa-map-marker-alt" style="color:#00695F";></span> Florianópolis, Brazil </li>
@@ -191,15 +191,15 @@
    <hr class="dashed">
 
    
-        <h4 id="intern-inclusiveEducation" style="PADDING-LEFT: 50px; color:#00695F";> Intern in Science Park, Federal University of Santa Catarina </h4>
+        <h4 id="intern-park" style="PADDING-LEFT: 50px; color:#00695F";> Intern in Science Park, Federal University of Santa Catarina </h4>
          <ul style="PADDING-LEFT: 50px">
             <li> <span class="fa fa-calendar-alt" style="color:#00695F";></span> Mar 2009 - Dec 2009 </li>
             <li> <span class="fa fa-map-marker-alt" style="color:#00695F";></span> Florianópolis, Brazil </li>
             </li>
             <li> Main activities:</li> </ul>
             <li style="PADDING-LEFT: 80px"> Creation and application of guided tours in the Science Park for people over 10 years old; </li>
-            <li style="PADDING-LEFT: 80px"> Creation and application of pedagogical experiments for students from primary and secondary school;</li>
             <li style="PADDING-LEFT: 80px"> Develop the project Science Chest - Experimental Activities in Science Teaching;</li>
+            <li style="PADDING-LEFT: 80px"> Creation and application of pedagogical experiments for students from primary and secondary school;</li>
         <ul style="PADDING-LEFT: 50px">
             <li> <a href="https://vivaciencia.ufsc.br/">Website</a></li></ul>
 
