--- a/cv.html
+++ b/cv.html
@@ -100,7 +100,7 @@
 				                <li style="font-size:1px";> &nbsp;</li>        	
 				                <li>
 				                    <a href="https://environment.leeds.ac.uk/geography/staff/9295/dr-patricia-ternes"><span class="fas fa-university" style="font-size:50px";></span></a>
-				                    <a href="https://environment.leeds.ac.uk/geography/staff/9295/dr-patricia-ternes"> School of Geography web page </a>
+				                    <a href="https://environment.leeds.ac.uk/geography/staff/9295/dr-patricia-ternes"> University of Leeds Homepage </a>
 				                </li>
 				                <li style="font-size:1px";> &nbsp;</li>
 				                <li>
@@ -173,8 +173,12 @@
 		                    </section>
 								<h3 id="education">Education</h3>
 								<ul style="PADDING-LEFT: 50px">
-									<li> PhD in Science: Theoretical Physics, Physics Institute, Federal University of Rio Grande do Sul, Brazil(2018).</li>
-									<li> MSc. in Physics, Physics Department,  Federal University of Santa Catarina, Brazil (2014). </li>
+									<li> PhD in Science: Theoretical Physics, Physics Institute, Federal University of Rio Grande do Sul, Brazil(2018).
+										<a href="/publications.html#phd-thesis" style="font-size:12px">More information</a>
+									</li>
+									<li> MSc. in Physics, Physics Department,  Federal University of Santa Catarina, Brazil (2014). 
+										<a href="/publications.html#msc-dissertation" style="font-size:12px">More information</a>
+									</li>
 									<li> <i>Licenciatura</i> in Physics, Physics Department,  Federal University of Santa Catarina, Brazil (2012).</li>
 								</ul>
 								<p> &nbsp;</p>
