--- a/presentations.html
+++ b/presentations.html
@@ -11,11 +11,11 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="/js/jquery.min.js"></script>
-		<script src="/js/jquery.dropotron.min.js"></script>
-		<script src="/js/skel.min.js"></script>
-		<script src="/js/skel-layers.min.js"></script>
-		<script src="/js/init.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="/css/skel.css" />
 			<link rel="stylesheet" href="/css/style.css" />
@@ -58,6 +58,15 @@
                     <div class="row">
                
                         <!-- Content -->
+                        
+                        <!-- Presentations -->
+						<h3 id="workshop-presentations"><a name="papers"></a>Workshop Presentations</h3>
+
+							<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<a href="Documents/Presentations/2021-05-26-RADDISH_WORKSHOP/2021-05-26-RADDISH_WORKSHOP.html">Applications to real pedestrian traces and gate selection problems with Particle Filters</a>.  Keynote presentation by <a href="https://patricia-ternes.github.io/">Patricia Ternes</a> and <a href="https://www.nickmalleson.co.uk/">Nick Malleson</a> at the <a href="#">Towards real-time numerical simulations of human-environment systems: data assimilation & agent-based modelling Workshop</a>, 26th May 2021.
+							</p>
+
+
                         <div class="2u">
                             <ul class="style">
                                 <li>
@@ -91,7 +100,7 @@
 	</body>
 </html>
 
-
+							<!-- 
 	                        <ul style="PADDING-LEFT: 50px">
 	                        	<li>Slip boundary conditions and the behaviour of nanoconfined water.
 	                        		VIII Workshop in Complexity of Water, Other Liquids and Science Education.
@@ -124,4 +133,4 @@
 		                        <li>Mobility analysis of a water-like fluid confined in carbon nanotubes.
 		                        	Complex Systems Seminars.
 		                        	UFRGS, Brazil, September 2014.
-		                    </ul>
+		                    </ul>-->
