--- a/Documents/Presentations/2021-05-26-RADDISH_workshop.html
+++ b/Documents/Presentations/2021-05-26-RADDISH_workshop.html
@@ -26,7 +26,9 @@
 
 
 	<body>
-
+<p> <span  class="fa fa-desktop" style="color:#00695F";></span>
+							<a href="/Documents/Presentations/2021-05-26-RADDISH_WORKSHOP/2021-05-26-RADDISH_WORKSHOP.html">Applications to real pedestrian traces and gate selection problems with Particle Filters</a>.  Keynote presentation by <a href="https://patricia-ternes.github.io/">Patricia Ternes</a> and <a href="https://www.nickmalleson.co.uk/">Nick Malleson</a> at the <a href="https://www.socsimfest21.eu/">Towards real-time numerical simulations of human-environment systems: data assimilation & agent-based modelling Workshop</a>, 26th May 2021.
+							</p>
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
