update raddish workshop presentation

--- a/Documents/Presentations/2021-05-26-RADDISH_workshop.html
+++ b/Documents/Presentations/2021-05-26-RADDISH_workshop.html
@@ -6,7 +6,7 @@
 
 		<title>CCPF RADDISH workshop</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="description" content="Keynote presentation by Patricia Ternes and Nick Malleson at the Towards real-time numerical simulations of human-environment systems: data assimilation & agent-based modelling Workshop, 26th May 2021.">
         <meta name="author" content="Patricia Ternes">
         <meta name="author" content="Nick Malleson">
         <meta name="keywords" content="ABM, data assimilation, city simulation">
@@ -86,7 +86,7 @@
 
                 <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
               		
-					<div data-id="box2"><img src="images/density-model/02-gct-environment.png" style="height: 500px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"></div>
+					<div><img src="images/density-model/02-gct-environment.png" style="height: 500px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"></div>
 
   					<div data-id="box1" style="background:gray;position:absolute;left:450px;top:255px;width:20px;height:20px;border-radius:10px;">
   					</div>
@@ -204,7 +204,7 @@
                 </section>
                 <section class="r-hstack justify-center">
                 	<h1 style="font-size:70px;"> Pedestrians Trajectories & Model Prediction </h1>
-                	<h2 style="font-size:30px;"> Initial conditions + speed + exit gate </h2></br>
+                	<h2 style="font-size:30px;"> 274 agents + Initial conditions + speed + exit gate </h2></br>
               		<div  style="display: grid;grid-template-columns: 1fr 1fr;grid-gap: 50px;text-align:left;">
 					<div>
 						<ul style="font-size: 20px;">
@@ -265,6 +265,12 @@
 					</div>
                 </section>
 
+                <section class="r-hstack justify-center">
+                	<h1 style="font-size:70px;"> Categorical-Continuous Particle Filter</h1>
+                	
+ 					<div><img src="images/density-model/CCPF-Flowchart.png" style="margin: 0 auto 4rem auto; background:transparent;" class="demo-logo"></div>
+					</div>
+                </section>
 
 			</div>
 
