update raddish workshop presentation

--- a/Documents/Presentations/2021-05-26-RADDISH_workshop.html
+++ b/Documents/Presentations/2021-05-26-RADDISH_workshop.html
@@ -68,32 +68,11 @@
                 		Photo by <a href="https://unsplash.com/@raflfc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rafael Leão</a> on <a href="https://unsplash.com/s/photos/grand-central-station?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>                	
   					</div>
 
-  					<div data-id="box1" style = "border:0px solid Tomato;position:absolute;left:165px; top:425px;width: 0px; height: 0px; margin: 10px; border-radius: 100px;">
-  					</div>
-                </section>
-
-                <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)" data-background-image="images/rafael-leao-YJ4hqRchpWE-unsplash.jpg">
-                	<div>
-
-                	</div>
-                	 <div style = "position:absolute;left:-150px; top:600px;font-size: 15px;background-color:rgba(255,255,255,0.5);border-radius:25px;padding:10px">
-                		Photo by <a href="https://unsplash.com/@raflfc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Rafael Leão</a> on <a href="https://unsplash.com/s/photos/grand-central-station?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>                	
-  					</div>
-
-  					<div data-id="box1" style = "border:5px solid red;position:absolute;left:200px; top:400px;width: 50px; height: 100px; margin: 10px; border-radius: 100px;">
-  					</div>
                 </section>
 
                 <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
-              		
-					<div><img src="images/density-model/02-gct-environment.png" style="height: 500px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"></div>
-
-  					<div data-id="box1" style="background:gray;position:absolute;left:450px;top:255px;width:20px;height:20px;border-radius:10px;">
-  					</div>
-                </section>
-
-                <section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
-
+                	<h1 style="font-size:70px;"> StationSim </h1>
+                	<h2 style="font-size:30px;"> Agent-based model </h2>
               		<div  class="r-hstack justify-center" style="display: grid;grid-template-columns: 1fr 1fr;grid-gap: 50px;text-align:left;">
 					<div><br/><br/>
 						<div data-id="box2"><img src="images/density-model/02-gct-environment.png" style="margin: 0 auto 4rem auto; background:transparent;" class="demo-logo"></div>
