update raddish workshop presentation

--- a/Documents/Presentations/2021-05-26-RADDISH_workshop.html
+++ b/Documents/Presentations/2021-05-26-RADDISH_workshop.html
@@ -333,15 +333,24 @@ $$T = \left[ \begin{array}{ccccccccccc}
 
                 </section>
 
-				<section class="r-hstack justify-center">
-                	<h1 style="font-size:70px;">CCPF versus SIR-PF</h1>
+                 <section class="r-hstack justify-center">
+                	<h1 style="font-size:70px;">CCPF \(\times \) SIR-PF \(\times \) Model prediction</h1>
+              		<div  style="display: grid;grid-template-columns: 1fr 1fr;grid-gap: 50px;text-align:left;">
+					<div>
               		<ul style="font-size: 20px;">
-						<li> One agent per simulation, 100 particles, DA window of 25 frames</li>
-					</ul></br>
-					<img src="images/density-model/results/6.png" style="background:transparent;height:500px">
-					<!--<img src="images/density-model/results/5b.png" style="background:transparent;width:60%">-->
-
+						<li> Data Assimilation - One agent per simulation</li>
+					</ul>
+						<div><img src="images/density-model/results/6.png" style="margin: 0 auto 4rem auto; background:transparent;" class="demo-logo"></div>
+					</div>
+					<div>
+              		<ul style="font-size: 20px;">
+						<li> Model prediction (unrealistic scenario) </li>
+					</ul>
+						<div><img src="images/density-model/results/1b.png" style="margin: 0 auto 4rem auto; background:transparent;" class="demo-logo"></div>
+  					</div>
+					</div>
                 </section>
+
 
 <section data-background-image="images/rafael-leao-YJ4hqRchpWE-unsplash.jpg">
                     <div style="background-color:rgba(255,255,255,0.8);border-radius: 25px;padding:15px;">
