--- a/publications.html
+++ b/publications.html
@@ -64,6 +64,13 @@
 
 						<!--<h4 id="2020">2020</h4> -->
 
+						<p> <span  class="fa fa-book" style="color:#00695F";></span>
+							Mendonça, B. H. S., <strong>P. Ternes</strong>, E. Salcedo, A. B. de Oliveira, and M. C. Barbosa (2020)
+						<a href="https://doi.org/10.1063/5.0031084">Water diffusion in carbon nanotubes: Interplay between confinement, surface deformation, and temperature.</a>
+						<em>The Journal of Chemical Physics</em> 153 (24): 244504.</p>
+
+						<!--<h4 id="2020">2020</h4> -->
+
 							<p> <span  class="fa fa-book" style="color:#00695F";></span>
 								Mendonça, B. H. S., <strong>P. Ternes</strong>, E. Salcedo, A. B. de Oliveira, and M. C. Barbosa (2020)
 							<a href="https://doi.org/10.1063/1.5129394">Water diffusion in rough carbon nanotubes.</a>
