add RJUKF paper

--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,15 @@
 					<!-- Papers -->
 					<h3 id="peer-reviewed-journal-articles"><a name="papers"></a>Peer-Reviewed Journal Articles</h3>
 
+					
+						<!--<h4 id="2020">2020</h4> -->
+
+						<p> <span  class="fa fa-book" style="color:#00695F";></span>
+							Clay, R., J. A. Ward, <strong>P. Ternes</strong>, L.‐M. Kieu, and N. Malleson (2021)
+						<a href="https://doi.org/10.1016/j.simpat.2021.102386">Real‐time agent‐based crowd simulation with the Reversible Jump Unscented Kalman Filter.</a>
+						<em>Simulation Modelling Practice and Theory</em> 113: 102386.</p>
+
+					
 						<!--<h4 id="2020">2020</h4> -->
 
 						<p> <span  class="fa fa-book" style="color:#00695F";></span>
